template: fix footer message overlapping with back-to-top

--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -146,7 +146,8 @@ footer
   bottom: 1rem
   opacity: .7
   p
-    margin: 0
+    // Set right margin to prevent overlapping with back-to-top
+    margin: 0 3.5rem 0 0
 
 #back-to-top
   $bottonSize: 2.5rem
